# rugs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
rugs/: Cargo.toml
rugs/src/: ast.rs  cli.rs  context.rs  environment.rs  error.rs  kernel.rs  lib.rs  location.rs  names.rs  parser.rs  session.rs
rugs/src/frontend/: cli.rs  mod.rs  session.rs
rugs/src/parser/: declaration.rs  expression.rs  helpers.rs  lexing.rs  module.rs  pattern.rs  tests.rs  types.rs
rugs/src/runtime/: mod.rs
rugs/src/support/: error.rs  mod.rs  names.rs
rugs/test/input/: hello.hs  module.hs  other-module.hs  pattern.hs
