[package]
name = "rugs"
version = "0.0.1"
description = "A WIP Haskell implementation"
homepage = "https://github.com/melted/rugs"
readme = "README.md"
repository = "https://github.com/melted/rugs"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-bigint = "0.4"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"]}
